--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "cors": "^2.7.1",
     "ejs": "^2.3.4",
     "express": "^4.15.3",
-    "mongoose": "^4.10.1"
+    "mongoose": "^4.10.1",
+    "node": "^7.7.4",
+    "npm": "^3.10.10"
   },
   "devDependencies": {
     "node-inspector": "0.12.3"
