--- a/package.json
+++ b/package.json
@@ -22,8 +22,8 @@
     "ejs": "^2.3.4",
     "express": "^4.15.3",
     "mongoose": "^4.10.1",
-    "node": "^7.7.4",
-    "npm": "^3.10.10"
+    "node": "6.9.4",
+    "npm": "3.10.10"
   },
   "devDependencies": {
     "node-inspector": "0.12.3"
